Update tycho version and small pom.xml updates
Signed-off-by: Fred Bricon <fbricon@gmail.com>